--- a/centerFrame2.html
+++ b/centerFrame2.html
@@ -37,7 +37,7 @@
   <span class="pic"><img style="border-color:blue;"src="https://images.pexels.com/photos/358499/pexels-photo-358499.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="imgs"></span>
 </center>
 <center><span class="pic"><img style="border-color:red;"src="img\WhatsApp Image 2020-05-17 at 11.13.46 PM.jpeg" class="imgs"></span>
-  <span class="pic"><img style="border-color:cyan;"src="https://images.pexels.com/photos/94275/beautiful-girl-female-young-94275.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="imgs"></span>
+  <span class="pic"><img style="border-color:cyan;"src="img\WhatsApp Image 2020-05-17 at 11.44.36 PM.jpeg" class="imgs"></span>
   <span class="pic"><img style="border-color:green;"src="img\WhatsApp Image 2020-05-17 at 11.16.47 PM (1).jpeg" class="imgs"></span>
 </center>
 </center></div>
